feat:Feature updated

--- a/ServiceLink/src/main/resources/messages.properties
+++ b/ServiceLink/src/main/resources/messages.properties
@@ -8,8 +8,11 @@ ARGUMENT_TYPE_MISMATCH=1009-Type mismatch for the argument
 ACCESS_DENIED=1010-Access restricted.
 DATE_FORMAT_ERROR=1011-Date format error
 LANGUAGE_CHANGED=1012-Language Changed
+USER_NOT_FOUND=1013-User not found
+
 
 #User
+USER_ID_REQUIRED=1014-User ID required
 USERNAME_REQUIRED=1015-User Name required
 PASSWORD_REQUIRED=1016-Password required
 EMAIL_PHONE_REQUIRED=1017-Email OR Phone required
@@ -28,3 +31,23 @@ OTP_REQUIRED=1031-OTP Required
 OTP_NOT_VALID=1032-OTP Not Valid
 OTP_MUST_BE_SIX_DIGITS=1033-Otp must have 6 digits
 OTP_EXPIRED=1033-OTP expired
+
+#JOB POST
+
+POST_NOT_FOUND=1040-Post Not Found
+JOB_TITLE_REQUIRED=1041-Job Title Required
+COMPANY_NAME_REQUIRED=1042-Company Name Required
+LOCATION_REQUIRED=1043-Location Required
+EXPERIENCE_REQUIRED=1044-Experience Required
+JOB_DESCRIPTION_REQUIRED=1045-Job Description Required
+JOB_TYPE_REQUIRED=1046-Job Type Required
+JOB_CATEGORY_REQUIRED=1047-Job Category Required
+APPLICATION_DEADLINE=1048-Application Deadline should be future date
+POSTED_DATE_REQUIRED=1049-Post Published date required
+
+
+APPLICANT_ID_REQUIRED=1055-Applicant Id is Required
+APPLICANT_NOT_FOUND=1056-Applicant Not Found
+APPLICATION_NOT_FOUND=1057-Application Not Found
+APPLICATION_ID_REQUIRED=1058-Application Id is Required
+APPLICANT_ALREADY_EXISTS=1059-Application already under process
