feat:added new feture

--- a/ServiceLink/src/main/resources/messages.properties
+++ b/ServiceLink/src/main/resources/messages.properties
@@ -51,3 +51,13 @@ APPLICANT_NOT_FOUND=1056-Applicant Not Found
 APPLICATION_NOT_FOUND=1057-Application Not Found
 APPLICATION_ID_REQUIRED=1058-Application Id is Required
 APPLICANT_ALREADY_EXISTS=1059-Application already under process
+
+
+
+#password
+PASSWORD_UPDATE_FAILED=1060-Password Update Failed
+CURRENT_PASSWORD_REQUIRED=1061-Current Password is required
+NEW_PASSWORD_REQUIRED=1062-New Password is required
+NEW_PASSWORD_MISMATCH=1063-New Password and Confirm Password do not match
+CURRENT_PASSWORD_MISMATCH=1064-Password Incorrect
+
